# agent-from-scratch

./: .env.example  README.md  pyproject.toml
notebook/: example.ipynb
src/agents/: agentic_flow.py  agents.py
src/models/: gemini_models.py
src/prompts/: prompt.py
src/toolbox/: toolbox.py
src/tools/: basic_calculator.py  date_parser.py
