[project]
name = "agent-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "google-generativeai>=0.8.3",
    "iprogress>=0.4",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "isort>=5.13.2",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "termcolor>=2.5.0",
    "yfinance>=0.2.50",
]
